fix: make overflow-x scroll so that more radio buttons can fit

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -781,7 +781,7 @@ body {
 
   td {
     min-height: 35px;
-    overflow-x: initial;
+    overflow-x: scroll;
     margin: auto;
 
     .text-container {
